--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Unit2CreateWithCode.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Unit2CreateWithCode.data.gz",
-        frameworkUrl: buildUrl + "/Unit2CreateWithCode.framework.js.gz",
-        codeUrl: buildUrl + "/Unit2CreateWithCode.wasm.gz",
+        dataUrl: buildUrl + "/Unit2CreateWithCode.data",
+        frameworkUrl: buildUrl + "/Unit2CreateWithCode.framework.js",
+        codeUrl: buildUrl + "/Unit2CreateWithCode.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Prototype2",
